--- a/StoreApp.Web/ClientApp/app/components/app/app.component.html
+++ b/StoreApp.Web/ClientApp/app/components/app/app.component.html
@@ -8,6 +8,7 @@
     </div>
     
     <div class="row">
+        <comp-alert></comp-alert>
         <!-- router outlet to render routing components inside -->
         <router-outlet></router-outlet>
     </div>
