--- a/StoreApp.Web/ClientApp/app/components/permission/permission.component.html
+++ b/StoreApp.Web/ClientApp/app/components/permission/permission.component.html
@@ -1,9 +1,9 @@
 
-<h2>Permission denied</h2>
+<h2>Access denied</h2>
 
 
 
-<p>User is not alloowed to access {{url}}.</p>
+<p>User is not allowed to perform the request due roles permission.</p>
 
 <br />
 <br />
