--- a/StoreApp.Web/ClientApp/app/components/home/home.component.html
+++ b/StoreApp.Web/ClientApp/app/components/home/home.component.html
@@ -35,4 +35,4 @@ Price: {{product.price}}
 <br />
 <br />
 
-<comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnObject($event)"></comp-autocomplete>
+<comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
