--- a/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
@@ -10,14 +10,14 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
             <ul class="nav navbar-nav">
-                <!--<li><a class="nav-link" routerLink="/login">Login</a></li>-->
+                <li><a class="nav-link" routerLink="/login">Login</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" *ngIf="isLogged()">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{login}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a class="nav-link" routerLink="/login">Logout</a></li>
+                        <li (click)="onLogout()"><a class="nav-link">Logout</a></li>
                     </ul>
                 </li>
             </ul>
