adjust alert and menu

--- a/StoreApp.Web/ClientApp/app/modules/comp/autocomplete/autocomplete.component.html
+++ b/StoreApp.Web/ClientApp/app/modules/comp/autocomplete/autocomplete.component.html
@@ -1,5 +1,5 @@
-<div class="autocomplete" style="width:300px;">
-    <input type="text" [(ngModel)]="textToSearch" (keyup)="onTextChange()">
+<div class="autocomplete">
+    <input type="text" class="form-control" [(ngModel)]="textToSearch" (keyup)="onTextChange()">
     <div class="autocomplete-items">
         <div *ngFor="let item of itemsFromUrl;" (click)="onSelectItem(item)">
             {{item[displayPropertyName]}}
