--- a/StoreApp.Web/ClientApp/app/components/home/home.component.html
+++ b/StoreApp.Web/ClientApp/app/components/home/home.component.html
@@ -2,12 +2,12 @@
 
 <br />
 
-<input type="text" [(ngModel)]="id" />
+<input type="text" class="form-control" [(ngModel)]="id" />
 
 <br />
 <br />
 
-<button (click)="getOne()">Get One (Anonymous)</button>
+<button class="btn btn-primary" (click)="getOne()">Get One (Anonymous)</button>
 
 <br />
 <br />
@@ -22,25 +22,23 @@ Price: {{product.price}}
 <br />
 <br />
 
-
-
-<button (click)="postOne()">Post One (Authorized)</button>
-
+<button class="btn btn-primary" (click)="getAll()">Get All (Authorized)</button>
 <br />
-<br />
-
-
-<button (click)="getAll()">Get All (Authorized with Roles)</button>
-<br />
-
 <ul>
     <li *ngFor="let p of products;">
         {{p.id}} - {{p.name}} - {{p.price}}
     </li>
 </ul>
+<br />
+
+<button class="btn btn-primary" (click)="postOne()">Post One (Authorized with roles)</button>
+
+<br />
+<br />
+
 
 <br />
 
 <comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
 <br />
-teste
+Miss
