--- a/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
@@ -15,9 +15,9 @@
 
             <ul class="nav navbar-nav navbar-right" *ngIf="isLogged()">
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{login}} <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{userName}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#" (click)="onLogout()">Logout</a></li>
+                        <li (click)="onLogout()">Logout</li>
                     </ul>
                 </li>
             </ul>
