--- a/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
@@ -17,7 +17,7 @@
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{userName}} <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li (click)="onLogout()">Logout</li>
+                        <li (click)="onLogout()"><a>Logout</a></li>
                     </ul>
                 </li>
             </ul>
