--- a/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientApp/app/components/navtop/navtop.component.html
@@ -11,6 +11,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
             <ul class="nav navbar-nav">
                 <li><a routerLink="/login">Login</a></li>
+                <li><a routerLink="/row">Row</a></li>
             </ul>
 
             <ul class="nav navbar-nav navbar-right" *ngIf="isLogged()">
