get, post and products row improvements

--- a/StoreApp.Web/ClientApp/app/components/home/home.component.html
+++ b/StoreApp.Web/ClientApp/app/components/home/home.component.html
@@ -39,6 +39,7 @@ Price: {{product.price}}
 
 <br />
 
+<!--[] to put value inside the component and () to get the returned value from the component -->
 <comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
 <br />
 Miss
