--- a/StoreApp.Web/ClientApp/app/components/products/row/row.component.html
+++ b/StoreApp.Web/ClientApp/app/components/products/row/row.component.html
@@ -1,10 +1,7 @@
-<h2>Row</h2>
 
-<br />
+<b>This is comp-row</b>
 
-<br />
-
-<div class="row" *ngFor="let product of products" >
+<div class="row" style="border: 1px solid black;" *ngFor="let product of products" >
     <table class="table table-striped">
         <thead>
             <tr>
