--- a/StoreApp.Web/ClientApp/app/components/products/row/row.component.html
+++ b/StoreApp.Web/ClientApp/app/components/products/row/row.component.html
@@ -1,7 +1,7 @@
 
 <b>This is comp-row</b>
 
-<div class="row" style="border: 1px solid black;" *ngFor="let product of products" >
+<div style="border: 1px solid black;" *ngFor="let product of products" >
     <table class="table table-striped">
         <thead>
             <tr>
