--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
@@ -1,6 +1,6 @@
 
 
-<div *ngFor="let alert of alerts" class="{{ cssClass(alert) }} alert-dismissable">
+<div *ngFor="let alert of alerts" class="{{ chooseCssClass(alert) }} alert-dismissable">
     {{alert.message}}
     <a class="close" (click)="removeAlert(alert)">&times;</a>
 </div>
