--- a/StoreApp.Web/Views/Shared/_Layout.cshtml
+++ b/StoreApp.Web/Views/Shared/_Layout.cshtml
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>StoreApp</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>StoreApp AspNet View</title>
 
+    <!--Comment base ref due an issue when trying to get js and other files, the path couldn't been found-->
+    <!--<base href="~/">-->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="assets/images/store.ico">
     <link href="assets/css/bootstrap.3.3.7.min.css" rel="stylesheet" />
 
@@ -19,17 +21,15 @@
         <p>&copy; 2018 - StoreApp.Web</p>
     </footer>
 
-
-    <script type="text/javascript" src="inline.bundle.js"></script>
-    <script type="text/javascript" src="polyfills.bundle.js"></script>
-    <script type="text/javascript" src="styles.bundle.js"></script>
-    <script type="text/javascript" src="scripts.bundle.js"></script>
-    <script type="text/javascript" src="vendor.bundle.js"></script>
-    <script type="text/javascript" src="main.bundle.js"></script>
-
     <script src="assets/js/jquery.2.1.3.min.js"></script>
     <script src="assets/js/bootstrap.3.3.7.min.js"></script>
 
+    <script type="text/javascript" src="inline.bundle.js"></script>
+    <script type="text/javascript" src="polyfills.bundle.js"></script>
+    <script type="text/javascript" src="vendor.bundle.js"></script>
+    <script type="text/javascript" src="main.bundle.js"></script>
 
 </body>
 </html>
+
+
