implmented items and major repositories fixes with HttpContext.

--- a/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
@@ -1,8 +1,15 @@
 <h2>Home</h2>
 
+<h3>Wellcome</h3>
 <br />
+<p>This is an Angular App to create order using products and values.</p>
+<p>To start, make login and create items and products.</p>
+<p>Then, create orders.</p>
+<p>It can be possible to register a new user if there is no one.</p>
+<br />
+<h4>Good trip!</h4>
 
-<input type="text" class="form-control" [(ngModel)]="id" />
+<!--<input type="text" class="form-control" [(ngModel)]="id" />
 
 <br />
 <br />
@@ -37,13 +44,14 @@ Price: {{product.price}}
 <br />
 
 
-<br />
+<br />-->
 
 <!--[] to put value inside the component and () to get the returned value from the component -->
-<comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
+
+<!--<comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
 <br />
 Miss
 
 <br />
 <br />
-<button class="btn btn-primary" (click)="postItem()">Post Item</button>
+<button class="btn btn-primary" (click)="postItem()">Post Item</button>-->
