adjust alert, error and loading components

--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/app/app.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/app/app.component.html
@@ -9,6 +9,7 @@
     
     <div class="row">
         <comp-alert></comp-alert>
+        <comp-load></comp-load>
         <!-- router outlet to render routing components inside -->
         <router-outlet></router-outlet>
     </div>
