--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
@@ -1,6 +1,6 @@
 
 
-<div *ngFor="let alert of alerts" class="{{ chooseAlertCSS(alert) }} alert-dismissable">
-    {{alert.message}}
+<div *ngFor="let alert of alerts" class="{{ chooseCSS(alert) }} alert-dismissable">
+    <strong>{{chooseType(alert.type)}}!</strong>&nbsp;{{alert.message}}
     <a class="close" (click)="removeAlert(alert)">&times;</a>
 </div>
