--- a/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
@@ -1,6 +1,9 @@
-<h2>Home</h2>
 
-<h3>Wellcome</h3>
+<comp-navtop></comp-navtop>
+
+<div class="row">
+
+<h4>Wellcome</h4>
 <br />
 <p>This is an Angular App to create order using products and values.</p>
 <p>To start, make login and create items and products.</p>
@@ -8,7 +11,7 @@
 <p>It can be possible to register a new user if there is no one.</p>
 <br />
 <h4>Good trip!</h4>
-
+</div>
 <!--<input type="text" class="form-control" [(ngModel)]="id" />
 
 <br />
