--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/list/item.list.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/list/item.list.component.html
@@ -1,5 +1,6 @@
+<comp-navtop></comp-navtop>
 
-<h2>Items List</h2>
+<div class="row">
 
 <a class="btn btn-primary float-right" routerLink="/items/edit">Add</a>
 
@@ -51,3 +52,4 @@
 
     </tbody>
 </table>
+</div>
