--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
@@ -1,7 +1,8 @@
-<h2>Products</h2>
+<comp-navtop></comp-navtop>
 
-<br />
+<div class="row">
 
-<p>This is how component inside component works</p>
+    <p>This is how component inside component works</p>
 
-<comp-row [products]="products"></comp-row>
+    <comp-row [products]="products"></comp-row>
+</div>
