--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/app/app.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/app/app.component.html
@@ -1,17 +1,11 @@
-
 <!--new component created and called to render a top nav-var-->
 
-<div class="container">
+<div class="container" style="position: relative !important;">
 
-    <div class="row">
-        <comp-navtop></comp-navtop>
-    </div>
+    <comp-load></comp-load>
     
-    <div class="row">
-        <comp-alert></comp-alert>
-        <comp-load></comp-load>
+    <div class="form-group">
         <!-- router outlet to render routing components inside -->
         <router-outlet></router-outlet>
     </div>
-
 </div>
