--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -1,20 +1,19 @@
+<comp-navtop></comp-navtop>
 
-<h2>Login</h2>
-
-
-            <div class="col-md-6 col-md-offset-3">
-                <form name="form" ng-submit="login()">
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary" (click)="login()">Login</button>
-                    </div>
-                </form>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <form name="form" ng-submit="login()">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
             </div>
-
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" (click)="login()">Login</button>
+            </div>
+        </form>
+    </div>
+</div>
