--- a/StoreApp.Web/ClientAngularApp/app/components/project/permission/permission.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/permission/permission.component.html
@@ -1,7 +1,8 @@
 
-<h2>Access denied</h2>
+<comp-navtop></comp-navtop>
 
-<br />
+<div class="row">
 
 User is not allowed to perform the request due to roles permission.
 
+</div>
