--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -1,31 +1,31 @@
 
-<h2>Register</h2>
+<comp-navtop></comp-navtop>
 
-
-            <div class="col-md-6 col-md-offset-3">
-                <form name="form" ng-submit="createUser()">
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" name="name" [(ngModel)]="user.name" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="username">Username</label>
-                        <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="password">Password</label>
-                        <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
-                    </div>
-                    <div class="form-group">
-                        <label for="role">Role</label>
-                        <select class="form-control" [(ngModel)]="user.role" name="role">
-                            <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
-                        </select>
-
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-primary" (click)="createUser()">Create User</button>
-                    </div>
-                </form>
+<div class="row">
+    <div class="col-md-6 col-md-offset-3">
+        <form name="form" ng-submit="createUser()">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" name="name" [(ngModel)]="user.name" required />
             </div>
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
+            </div>
+            <div class="form-group">
+                <label for="role">Role</label>
+                <select class="form-control" [(ngModel)]="user.role" name="role">
+                    <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
+                </select>
 
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary" (click)="createUser()">Create User</button>
+            </div>
+        </form>
+    </div>
+</div>
