--- a/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
@@ -1,7 +1,10 @@
 
 <comp-navtop></comp-navtop>
 
-<div class="row">
+<comp-load></comp-load>
+
+<div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="panel panel-form">
 
 <h4>Wellcome</h4>
 <br />
@@ -12,6 +15,8 @@
 <br />
 <h4>Good trip!</h4>
 </div>
+</div>
+
 <!--<input type="text" class="form-control" [(ngModel)]="id" />
 
 <br />
