--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
@@ -1,8 +1,16 @@
+
+
 <comp-navtop></comp-navtop>
 
-<div class="row">
+<div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="panel panel-form">
 
+                <comp-load></comp-load>
+                
     <p>This is how component inside component works</p>
 
     <comp-row [products]="products"></comp-row>
-</div>
+
+
+            </div>
+        </div>
