--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/alert/alert.component.html
@@ -1,6 +1,8 @@
 
 
+<div style="position: absolute; float: right; text-align: right; right: 0; z-index: 10; margin-right: 5px;">
 <div *ngFor="let alert of getAlerts()" class="{{ chooseCSS(alert) }} alert-dismissable">
     <strong>{{chooseTypeName(alert.type)}}!</strong>&nbsp;{{alert.message}}
     <a class="close" (click)="removeAlert(alert)">&times;</a>
+</div>
 </div>
