--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
@@ -1,5 +1,4 @@
-<div class="row">
-    <nav class="navbar navbar-inverse">
+    <nav class="navbar navbar-inverse" *ngIf="isLogged()">
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="collapsed navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-9"
@@ -13,15 +12,6 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
 
-                <ul class="nav navbar-nav" *ngIf="!isLogged()">
-                    <li class="{{ chooseModuleCSS(menuModuleEnum.Login) }}">
-                        <a routerLink="/login">Login</a>
-                    </li>
-                    <li class="{{ chooseModuleCSS(menuModuleEnum.Register) }}">
-                        <a routerLink="/register">Register</a>
-                    </li>
-                </ul>
-
                 <ul class="nav navbar-nav" *ngIf="isLogged()">
                     <li class="{{ chooseModuleCSS(menuModuleEnum.Products) }}">
                         <a routerLink="/products">Products</a>
@@ -31,7 +21,7 @@
                     </li>
                 </ul>
 
-                <ul class="nav navbar-nav navbar-right" *ngIf="isLogged()">
+                <ul class="nav navbar-nav navbar-right">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{username}}
                             <span class="caret"></span>
@@ -46,12 +36,9 @@
             </div>
         </div>
     </nav>
-</div>
 
-<div style="position: absolute; float: right; text-align: right; right: 0; z-index: 10;">
-    <comp-alert></comp-alert>
-    </div>
-    
-<div class="row">
-    <h3>{{title}}</h3>
-</div>
+<h3>{{title}}</h3>
+
+<div style="position: relative;"></div>
+
+<comp-alert></comp-alert>
