--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/edit/item.edit.component.html
@@ -1,7 +1,9 @@
 
 <comp-navtop></comp-navtop>
 
-<div class="row">
+<div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="panel panel-form">
+                <comp-load></comp-load>
 
     <div class="col-md-6 col-md-offset-3">
 
@@ -24,4 +26,5 @@
             <button class="btn btn-primary" (click)="save()">Save</button>
         </div>
     </div>
+</div>
 </div>
