--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/item.list.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/item.list.component.html
@@ -1,6 +1,9 @@
+
 <comp-navtop></comp-navtop>
 
-<div class="row">
+<div class="col-md-12 col-sm-12 col-xs-12">
+        <div class="panel panel-form">
+                <comp-load></comp-load>
 
 <a class="btn btn-primary float-right" routerLink="/items/edit">Add</a>
 
@@ -52,4 +55,5 @@
 
     </tbody>
 </table>
+</div>
 </div>
