--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -1,19 +1,26 @@
-<comp-navtop></comp-navtop>
 
-<div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <form name="form" ng-submit="login()">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
+<div class="login-form">
+        <comp-alert></comp-alert>
+    <comp-load></comp-load>
+    <form>
+        <h2>Sign in</h2>
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" class="form-control" name="username" [(ngModel)]="username" required />
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
+        </div>
+        <div class="form-group clearfix">
+            <div style="float: left;">
+                <button type="button" class="btn btn-primary pull-left" (click)="login()">Sign in</button>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
+            <div style="float: right;">
+                <a routerLink="/register">Forgot your password?</a>
+                <br />
+                <a routerLink="/register">Register a new user</a>
             </div>
-            <div class="form-group">
-                <button class="btn btn-primary" (click)="login()">Login</button>
-            </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
