--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -1,31 +1,30 @@
 
-<comp-navtop></comp-navtop>
-
-<div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <form name="form" ng-submit="createUser()">
+<div class="register-form">
+        <comp-alert></comp-alert>
+        <comp-load></comp-load>
+        <form>
+            <h2>Register</h2>  
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control" name="name" [(ngModel)]="user.name" required />
-            </div>
+                    <label>Name</label>
+                    <input type="text" class="form-control" name="username" [(ngModel)]="user.name" required />
+                </div>     
             <div class="form-group">
-                <label for="username">Username</label>
+                <label>Username</label>
                 <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
             </div>
             <div class="form-group">
-                <label for="password">Password</label>
+                <label>Password</label>
                 <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
             </div>
             <div class="form-group">
-                <label for="role">Role</label>
-                <select class="form-control" [(ngModel)]="user.role" name="role">
-                    <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
-                </select>
-
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" (click)="createUser()">Create User</button>
-            </div>
+                    <label>Role</label>
+                    <select class="form-control" [(ngModel)]="user.role" name="role">
+                            <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
+                        </select>
+                </div>
+            <div class="form-group clearfix">
+                    <button type="button" class="btn btn-primary" (click)="createUser()">Create User</button>
+            </div>    
         </form>
     </div>
-</div>
+
