--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
@@ -1,9 +1,6 @@
 <comp-navtop></comp-navtop>
+<div class="panel panel-body">
 
-<div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="panel panel-form">
-
-{{message}}
+    {{message}}
 
 <div>
-</div>
