--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/load/load.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/load/load.component.html
@@ -1,3 +1,5 @@
 
 
-<div class="loader" *ngIf="isToShow"></div>
+<div class="loader" *ngIf="isToShow()">
+    <img src="assets/images/loading.gif" />
+</div>
