--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/navtop/navtop.component.html
@@ -37,8 +37,8 @@
         </div>
     </nav>
 
-<h3>{{title}}</h3>
-
-<div style="position: relative;"></div>
+    <div class="panel panel-title">
+        {{title}}
+    </div>
 
 <comp-alert></comp-alert>
