--- a/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
@@ -1,21 +1,18 @@
 
 <comp-navtop></comp-navtop>
+<div class="panel panel-body">
+    <comp-load></comp-load>
 
-<comp-load></comp-load>
-
-<div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="panel panel-form">
-
-<h4>Wellcome</h4>
-<br />
-<p>This is an Angular App to create order using products and values.</p>
-<p>To start, make login and create items and products.</p>
-<p>Then, create orders.</p>
-<p>It can be possible to register a new user if there is no one.</p>
-<br />
-<h4>Good trip!</h4>
+    <h4>Wellcome</h4>
+    <br />
+    <p>This is an Angular App to create order using products and values.</p>
+    <p>To start, make login and create items and products.</p>
+    <p>Then, create orders.</p>
+    <p>It can be possible to register a new user if there is no one.</p>
+    <br />
+    <h4>Good trip!</h4>
 </div>
-</div>
+
 
 <!--<input type="text" class="form-control" [(ngModel)]="id" />
 
@@ -53,9 +50,7 @@ Price: {{product.price}}
 
 
 <br />-->
-
 <!--[] to put value inside the component and () to get the returned value from the component -->
-
 <!--<comp-autocomplete [url]="'products/findbyname'" [displayPropertyName]="'name'" (onReturnObject)="onReturnProduct($event)"></comp-autocomplete>
 <br />
 Miss
