--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
@@ -1,16 +1,10 @@
 
-
 <comp-navtop></comp-navtop>
+<div class="panel panel-body">
+    <comp-load></comp-load>
 
-<div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="panel panel-form">
-
-                <comp-load></comp-load>
-                
     <p>This is how component inside component works</p>
 
     <comp-row [products]="products"></comp-row>
 
-
-            </div>
-        </div>
+</div>
