--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/permission/permission.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/permission/permission.component.html
@@ -1,10 +1,7 @@
 
 <comp-navtop></comp-navtop>
+<div class="panel panel-body">
 
-<div class="col-md-12 col-sm-12 col-xs-12">
-        <div class="panel panel-form">
+    User is not allowed to perform the request due to roles permission.
 
-User is not allowed to perform the request due to roles permission.
-
-</div>
 </div>
