--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -1,6 +1,6 @@
 
+<comp-alert></comp-alert>
 <div class="login-form">
-        <comp-alert></comp-alert>
     <comp-load></comp-load>
     <form>
         <h2>Sign in</h2>
@@ -13,10 +13,10 @@
             <input type="password" class="form-control" name="password" [(ngModel)]="password" required />
         </div>
         <div class="form-group clearfix">
-            <div style="float: left;">
+            <div class="float-right">
                 <button type="button" class="btn btn-primary pull-left" (click)="login()">Sign in</button>
             </div>
-            <div style="float: right;">
+            <div class="float-left">
                 <a routerLink="/register">Forgot your password?</a>
                 <br />
                 <a routerLink="/register">Register a new user</a>
