--- a/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/register/register.component.html
@@ -1,30 +1,32 @@
 
+<comp-alert></comp-alert>
 <div class="register-form">
-        <comp-alert></comp-alert>
-        <comp-load></comp-load>
-        <form>
-            <h2>Register</h2>  
-            <div class="form-group">
-                    <label>Name</label>
-                    <input type="text" class="form-control" name="username" [(ngModel)]="user.name" required />
-                </div>     
-            <div class="form-group">
-                <label>Username</label>
-                <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
+    <comp-load></comp-load>
+    <form>
+        <h2>Register</h2>
+        <div class="form-group">
+            <label>Name</label>
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.name" required />
+        </div>
+        <div class="form-group">
+            <label>Username</label>
+            <input type="text" class="form-control" name="username" [(ngModel)]="user.username" required />
+        </div>
+        <div class="form-group">
+            <label>Password</label>
+            <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
+        </div>
+        <div class="form-group">
+            <label>Role</label>
+            <select class="form-control" [(ngModel)]="user.role" name="role">
+                <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
+            </select>
+        </div>
+        <div class="form-group clearfix">
+            <div class="float-right">
+                <button type="button" class="btn btn-primary" (click)="createUser()">Create User</button>
             </div>
-            <div class="form-group">
-                <label>Password</label>
-                <input type="password" class="form-control" name="password" [(ngModel)]="user.password" required />
-            </div>
-            <div class="form-group">
-                    <label>Role</label>
-                    <select class="form-control" [(ngModel)]="user.role" name="role">
-                            <option *ngFor="let itemRole of roles" [ngValue]="itemRole">{{itemRole}}</option>
-                        </select>
-                </div>
-            <div class="form-group clearfix">
-                    <button type="button" class="btn btn-primary" (click)="createUser()">Create User</button>
-            </div>    
-        </form>
-    </div>
+        </div>
+    </form>
+</div>
 
