--- a/StoreApp.Web/assets/css/bootstrap.3.3.7.css
+++ b/StoreApp.Web/assets/css/bootstrap.3.3.7.css
@@ -4,7 +4,16 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */ /*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
 
- html {
+
+.float-left
+{
+    float: left;
+}
+.float-right {
+    float: right;
+}
+
+html {
     font-family: sans-serif;
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%
@@ -1857,8 +1866,7 @@ pre {
 }
 
 .row {
-    margin-right: -15px;
-    margin-left: -15px
+    width: 100%;
 }
 
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
@@ -5861,23 +5869,15 @@ a.list-group-item-danger, button.list-group-item-danger {
     line-height: 1.3
 }
 
-.panel {
+.panel, .panel-body {
     margin-bottom: 20px;
     background-color: #fff;
     border: 1px solid transparent;
     border-radius: 4px;
     -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.05);
     box-shadow: 0 1px 1px rgba(0,0,0,.05);
-}
-
-.panel-form
-{
-    margin: 5px;
-    padding: 5px;
-}
-
-.panel-body {
-    padding: 15px
+    margin: 6px;
+    padding: 6px;
 }
 
 .panel-heading {
@@ -5895,6 +5895,7 @@ a.list-group-item-danger, button.list-group-item-danger {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 16px;
+    font-size: large;
     color: inherit
 }
 
