--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/load/load.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/load/load.component.html
@@ -1,5 +1,5 @@
 
 
 <div class="loader" *ngIf="isToShow()">
-    <img src="assets/images/loading.gif" />
+    <img src="assets/images/loading3.gif" />
 </div>
