--- a/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/home/home.component.html
@@ -1,6 +1,6 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel panel-body">
+<div class="panel card-body">
     <comp-load></comp-load>
 
     <h4>Wellcome</h4>
