--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
@@ -1,6 +1,13 @@
-<comp-navtop></comp-navtop>
-<div class="panel panel-body">
 
-    {{message}}
-
-<div>
+<table class="table">
+    <thead class="thead-dark">
+        <tr>
+            <th>Something got wrong</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>{{message}}</td>
+        </tr>
+    </tbody>
+</table>
