--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/permission/permission.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/permission/permission.component.html
@@ -1,6 +1,6 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel panel-body">
+<div class="panel card-body">
 
     User is not allowed to perform the request due to roles permission.
 
