--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
@@ -1,6 +1,7 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel panel-body">
+
+<div class="card card-body">
     <comp-load></comp-load>
 
     <div class="float-right">
@@ -36,12 +37,11 @@
                     {{item.isActive}}
                 </td>
                 <td>
-
                     <a class="btn btn-default btn-sm" [routerLink]="['/items/edit', item.id]" title="edit">
-                        <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                        <span class="oi oi-pencil" title="edit" aria-hidden="true"></span>
                     </a>
                     <a class="btn btn-default btn-sm" (click)="remove(item)" title="remove">
-                        <span class="glyphicon glyphicon-minus" aria-hidden="true"></span>
+                        <span class="oi oi-trash" title="remove" aria-hidden="true"></span>
                     </a>
 
                 </td>
