--- a/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="form-group clearfix">
             <div class="float-right">
-                <button type="button" class="btn btn-primary pull-left" (click)="login()">Sign in</button>
+                <button type="submit" class="btn btn-primary pull-left" (click)="login()">Sign in</button>
             </div>
             <div class="float-left">
                 <a routerLink="/register">Forgot your password?</a>
