--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/products.component.html
@@ -1,6 +1,6 @@
 
 <comp-navtop></comp-navtop>
-<div class="panel panel-body">
+<div class="panel card-body">
     <comp-load></comp-load>
 
     <p>This is how component inside component works</p>
