adjust error and products almost done

--- a/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/0-core/error/error.component.html
@@ -2,12 +2,18 @@
 <table class="table">
     <thead class="thead-dark">
         <tr>
-            <th>Something got wrong</th>
+            <th>Something got wrong!</th>
         </tr>
     </thead>
     <tbody>
         <tr>
-            <td>{{message}}</td>
+            <td><strong>Url: </strong> {{url}}</td>
+        </tr>
+        <tr>
+            <td><strong>Status: </strong> {{status}}</td>
+        </tr>
+        <tr>
+            <td><strong>Message: </strong> {{message}}</td>
         </tr>
     </tbody>
 </table>
