--- a/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/products/edit/product.edit.component.html
@@ -57,7 +57,7 @@
                         {{item.count}}
                     </td>
                     <td>
-                        <a class="btn btn-secondary btn-sm" (click)="remove(item)" title="remove">
+                        <a class="btn btn-light btn-sm" (click)="remove(item)" title="remove">
                             <span class="oi oi-trash" title="remove" aria-hidden="true"></span>
                         </a>
                     </td>
