--- a/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
+++ b/StoreApp.Web/ClientAngularApp/app/components/project/items/items.component.html
@@ -37,11 +37,11 @@
                     {{item.isActive}}
                 </td>
                 <td>
-                    <a class="btn btn-secondary btn-sm" [routerLink]="['/items/edit', item.id]" title="edit">
-                        <span class="oi oi-pencil" title="edit" aria-hidden="true"></span>
+                    <a class="btn btn-light btn-sm" [routerLink]="['/items/edit', item.id]" title="edit">
+                        <span class="oi oi-pencil" aria-hidden="true"></span>
                     </a>
-                    <a class="btn btn-secondary btn-sm" (click)="remove(item)" title="remove">
-                        <span class="oi oi-trash" title="remove" aria-hidden="true"></span>
+                    <a class="btn btn-light btn-sm" (click)="remove(item)" title="remove">
+                        <span class="oi oi-trash" aria-hidden="true"></span>
                     </a>
 
                 </td>
